# wifi-android-connect

./: Cargo.toml  Readme.md  build.sh  log.txt
lua/: wifi-android-connect.lua
src/: adb_device.rs  client.rs  main.rs
wifi-android-connect-cli/: Cargo.toml
wifi-android-connect-cli/src/: main.rs
wifi-android-connect-lib/: Cargo.toml
wifi-android-connect-lib/src/: adb_device_authentication.rs  adb_mdns_discovery_service.rs  adb_zero_conf.rs  adb_zero_conf_mdns_sd.rs  client.rs  lib.rs
wifi-android-connect-neovim/: Cargo.toml
wifi-android-connect-nvim/: Cargo.toml  build.sh
wifi-android-connect-nvim/lua/: .gitignore  wifi-android-connect.lua
wifi-android-connect-nvim/src/: lib.rs
