[package]
name = "wifi-android-connect-neovim"
version = "0.1.0"
edition = "2021"
crate-type = ["cdylib"]

[dependencies]
nvim-oxi = { version = "0.5.1", features = ["neovim-0-10"] }
serde = { version = "1.0.209", features = ["derive"] }
wifi-android-connect-lib = { path = "../wifi-android-connect-lib" }


[target.x86_64-apple-darwin]
rustflags = ["-C", "link-arg=-undefined", "-C", "link-arg=dynamic_lookup"]

[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-undefined", "-C", "link-arg=dynamic_lookup"]
